--- a/src/app/loggin/loggin.component.html
+++ b/src/app/loggin/loggin.component.html
@@ -1,24 +1,31 @@
+<form #form="ngForm">
 <div class="card my-5 shadow-sm" style="height: 100%; background-color: rgba(0, 238, 255, 0.1);">
-    <div class="row card-body ">
-        <div class="d-flex flex-column col-md-4">
+  <div class="row card-body ">
+    <div class="d-flex flex-column col-md-4">
 
-            <label for="exampleInputEmail1">Addresse email</label>
-            <input #saisieEmail type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Saisir votre email">
-        </div>
-        <div class="d-flex flex-column col-md-4">
-            <label for="exampleInputPassword1">Mot de passe</label>
-            <input #saisiePassword type="password" class="form-control" id="exampleInputPassword1"
-                placeholder="Mot de passe">
-        </div>
-        <div class="d-flex flex-column col-md-4">
-             <!-- <input type="checkbox" class="form-check-input" id="exampleCheck1">  -->
-           <label class="form-check-label" for="exampleCheck1"></label>
-            <button (click)="connexion(saisieEmail.value, saisiePassword.value)" class="btn btn-info" routerLink="/inscription">Connexion</button>
+          <label for="exampleInputEmail1" required class="form-control">Addresse email</label>
+          <input #saisieEmail type="email" [(ngModel)]="col.email" #email="ngModel" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Saisir votre email">
         </div>
 
+        <div class="d-flex flex-column col-md-4">
+          <label for="exampleInputPassword1"required class="form-control">Mot de passe</label>
+          <input #saisiePassword type="password" [(ngModel)]="col.password" #password="ngModel" name="motDePasse" class="form-control" id="exampleInputPassword1"
+            placeholder="Mot de passe">
+        </div>
+        <div class="d-flex flex-column col-md-4">
+          <!-- <input type="checkbox" class="form-check-input" id="exampleCheck1">  -->
+          <label class="form-check-label" for="exampleCheck1"></label>
+          <button (click)="connexion(saisieEmail.value, saisiePassword.value)" class="btn btn-info"
+            routerLink="/inscription">Connexion</button>
+        </div>
 
-    </div>
 
-</div>
+  </div>
+
+
+  </div>
+
+
+</form>
 <router-outlet></router-outlet>
