--- a/src/app/loggin/loggin.component.html
+++ b/src/app/loggin/loggin.component.html
@@ -3,15 +3,15 @@
   <div class="row card-body ">
     <div class="d-flex flex-column col-md-4">
 
-          <label for="exampleInputEmail1" required class="form-control">Addresse email</label>
+          <label for="exampleInputEmail1" >Addresse email</label>
           <input #saisieEmail type="email" [(ngModel)]="col.email" #email="ngModel" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Saisir votre email">
+            placeholder="Saisir votre email" required class="form-control">
         </div>
 
         <div class="d-flex flex-column col-md-4">
-          <label for="exampleInputPassword1"required class="form-control">Mot de passe</label>
+          <label for="exampleInputPassword1">Mot de passe</label>
           <input #saisiePassword type="password" [(ngModel)]="col.password" #password="ngModel" name="motDePasse" class="form-control" id="exampleInputPassword1"
-            placeholder="Mot de passe">
+            placeholder="Mot de passe" required class="form-control">
         </div>
         <div class="d-flex flex-column col-md-4">
           <!-- <input type="checkbox" class="form-check-input" id="exampleCheck1">  -->
