--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-light nav justify-content-center" style="background-color: #e3f2fd;">
 
   <div class="container-fluid text-right my-4">
-    <div class="col">
-        Prénom NOM du collegueParticipant
-        <a href="#">Se déconnecter</a>
+    <div class="col" *ngIf="!connectedCol">
+        {{connectedCol.firstname}} {{connectedCol.lastname | uppercase }}
+        <a (click)="logout()">Se déconnecter</a>
     </div>
   </div>
 
 
-  <div class="row">
+  <div class="row" *ngIf="!connectedCol">
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link active" href="#">VOTES</a>
