creation du composant graphique votes

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
   <div class="row">
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" href="#">VOTES</a>
+        <a class="nav-link active" routerLink="/votes">VOTES</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">CLASSEMENT</a>
