--- a/src/app/loggin/loggin.component.html
+++ b/src/app/loggin/loggin.component.html
@@ -4,20 +4,19 @@
     <div class="d-flex flex-column col-md-4">
 
           <label for="exampleInputEmail1" >Addresse email</label>
-          <input #saisieEmail type="email" [(ngModel)]="col.email" #email="ngModel" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          <input  type="email" [(ngModel)]="col.email" #email="ngModel" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
             placeholder="Saisir votre email" required class="form-control">
         </div>
 
         <div class="d-flex flex-column col-md-4">
           <label for="exampleInputPassword1">Mot de passe</label>
-          <input #saisiePassword type="password" [(ngModel)]="col.password" #password="ngModel" name="motDePasse" class="form-control" id="exampleInputPassword1"
+          <input  type="password" [(ngModel)]="col.password" #password="ngModel" name="motDePasse" class="form-control" id="exampleInputPassword1"
             placeholder="Mot de passe" required class="form-control">
         </div>
         <div class="d-flex flex-column col-md-4">
           <!-- <input type="checkbox" class="form-check-input" id="exampleCheck1">  -->
           <label class="form-check-label" for="exampleCheck1"></label>
-          <button (click)="connexion(saisieEmail.value, saisiePassword.value)" class="btn btn-info"
-            routerLink="/inscription">Connexion</button>
+          <button (click)="connexion()" class="btn btn-info">Connexion</button>
         </div>
 
 
