1er commit Classement component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
   <h1 class="my-4">
     TOP COLLEGUES
   </h1>
-  <app-menu></app-menu>
-  <app-loggin></app-loggin>
+  <!--<app-menu></app-menu>-->
+  <!--<app-loggin></app-loggin>-->
+  <app-classement></app-classement>
 </div>
 
 
