2d commit Classement component

--- a/src/app/classement/classement.component.html
+++ b/src/app/classement/classement.component.html
@@ -32,7 +32,7 @@
       <tbody>
         <tr *ngFor="let collegue of collegues; index as i">
           <td>{{collegue.score}}</td>
-          <td>{{collegue.phone}}</td>
+          <td ><img src="{{collegue.photo}}" style="width: 100px"></td>
           <td>{{collegue.name}}</td>
         </tr>
       </tbody>
