--- a/src/app/loggin/loggin.component.html
+++ b/src/app/loggin/loggin.component.html
@@ -1,30 +1,29 @@
-<form #form="ngForm">
-<div class="card my-5 shadow-sm" style="height: 100%; background-color: rgba(0, 238, 255, 0.1);">
-  <div class="row card-body ">
-    <div class="d-flex flex-column col-md-4">
-
-          <label for="exampleInputEmail1" >Addresse email</label>
-          <input  type="email" [(ngModel)]="col.email" #email="ngModel" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Saisir votre email" required class="form-control">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 offset-sm-3">
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" class="form-control"
+                 formControlName="email"
+                 [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+          <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">Email requis</div>
+          </div>
         </div>
-
-        <div class="d-flex flex-column col-md-4">
-          <label for="exampleInputPassword1">Mot de passe</label>
-          <input  type="password" [(ngModel)]="col.password" #password="ngModel" name="motDePasse" class="form-control" id="exampleInputPassword1"
-            placeholder="Mot de passe" required class="form-control">
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password"
+                 formControlName="password"
+                 class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.required">Password requis</div>
+          </div>
         </div>
-        <div class="d-flex flex-column col-md-4">
-          <!-- <input type="checkbox" class="form-check-input" id="exampleCheck1">  -->
-          <label class="form-check-label" for="exampleCheck1"></label>
-          <button (click)="connexion()" class="btn btn-info">Connexion</button>
+        <div class="form-group">
+          <button [disabled]="loading" class="btn btn-primary">Connexion</button>
         </div>
-
-
+      </form>
+    </div>
   </div>
-
-
-  </div>
-
-
-</form>
-<router-outlet></router-outlet>
+</div>
